--- a/customRule.yaml
+++ b/customRule.yaml
@@ -17,7 +17,8 @@ payload:
   - DOMAIN-KEYWORD,jetbrains
   - DOMAIN-KEYWORD,xboxlive
   - DOMAIN-KEYWORD,wps  
-
+  - DOMAIN-KEYWORD,immersivetranslate    
+  
 # DOMAIN-SUFFIX
   - DOMAIN-SUFFIX,ident.me
   - DOMAIN-SUFFIX,iflow.work 
