--- a/customRule.yaml
+++ b/customRule.yaml
@@ -28,6 +28,7 @@ payload:
   - DOMAIN,api.sleep.pokemon.co.jp
   - DOMAIN,mirror.ghproxy.com
   - DOMAIN,cdn.jsdelivr.net
-
+  - DOMAIN,cdn.anti-ad.net
+  	
 # PROCESS-NAME
 # - PROCESS-NAME,IMI Camera.exe
