--- a/customRule.yaml
+++ b/customRule.yaml
@@ -27,8 +27,8 @@ payload:
   - DOMAIN-SUFFIX,iflow.work 
   - DOMAIN-SUFFIX,html-load.com
   - DOMAIN-SUFFIX,raenonx.cc
+  - DOMAIN-SUFFIX,skk.moe
   
-
 # DOMAIN
   - DOMAIN,clash.razord.top
   - DOMAIN,api.sleep.pokemon.co.jp
