--- a/customRule.yaml
+++ b/customRule.yaml
@@ -22,6 +22,7 @@ payload:
   - DOMAIN-KEYWORD,visualstudio
   - DOMAIN-KEYWORD,vscode
   - DOMAIN-KEYWORD,msn
+  - DOMAIN-KEYWORD,dns
 
 # DOMAIN-SUFFIX
   - DOMAIN-SUFFIX,ident.me
