--- a/customRule.yaml
+++ b/customRule.yaml
@@ -40,6 +40,7 @@ payload:
   - DOMAIN,www.hifini.com
   - DOMAIN,weather-server.allawnos.com
   - DOMAIN,thepiratebay.party
+  - DOMAIN,wiki.metacubex.one
   
 # PROCESS-NAME
  - PROCESS-NAME,smartdns.exe
