update:objects.githubusercontent.com

--- a/custom_direct.yaml
+++ b/custom_direct.yaml
@@ -53,6 +53,7 @@ payload:
   - DOMAIN,default.exp-tas.com
   - DOMAIN,anti-ad.net
   - DOMAIN,api.keygen.sh
+  - DOMAIN,objects.githubusercontent.com
   
 # PROCESS-NAME
  # - PROCESS-NAME,smartdns.exe
