--- a/custom_download.yaml
+++ b/custom_download.yaml
@@ -6,7 +6,7 @@ payload:
 #  - DOMAIN-SUFFIX,ident.me
 
 # DOMAIN
-  - DOMAIN,objects.githubusercontent.com
+ # - DOMAIN,objects.githubusercontent.com
 
 # PROCESS-NAME
  # - PROCESS-NAME,smartdns.exe
