--- a/custom_direct.yaml
+++ b/custom_direct.yaml
@@ -38,6 +38,9 @@ payload:
   - DOMAIN-SUFFIX,epicgames.com
   - DOMAIN-SUFFIX,cloudflarestorage.com
   - DOMAIN-SUFFIX,sleep.pokemon.co.jp
+  - DOMAIN-SUFFIX,tmdb.org
+  - DOMAIN-SUFFIX,themoviedb.org
+  - DOMAIN-SUFFIX,bgm.tv
   
 # DOMAIN
   - DOMAIN,clash.razord.top
