update:add www.hello-algo.com & giscus.app

--- a/custom_direct.yaml
+++ b/custom_direct.yaml
@@ -58,7 +58,8 @@ payload:
   - DOMAIN,anti-ad.net
   - DOMAIN,api.keygen.sh
   - DOMAIN,objects.githubusercontent.com
-  
+  - DOMAIN,www.hello-algo.com
+  - DOMAIN,giscus.app
 # PROCESS-NAME
  # - PROCESS-NAME,smartdns.exe
  	
