--- a/custom_direct.yaml
+++ b/custom_direct.yaml
@@ -22,6 +22,7 @@ payload:
   - DOMAIN-KEYWORD,vscode
   - DOMAIN-KEYWORD,msn
   - DOMAIN-KEYWORD,glados
+  - DOMAIN-KEYWORD,south-plus
 
 # DOMAIN-SUFFIX
   - DOMAIN-SUFFIX,ident.me
