--- a/custom_direct.yaml
+++ b/custom_direct.yaml
@@ -52,6 +52,7 @@ payload:
   - DOMAIN,cdn.anti-ad.net
   - DOMAIN,www.hifini.com
   - DOMAIN,weather-server.allawnos.com
+  - DOMAIN,thepiratebay.party
   - DOMAIN,ip.900cha.com
   - DOMAIN,cn.gravatar.com
   - DOMAIN,default.exp-tas.com
