--- a/custom_download.yaml
+++ b/custom_download.yaml
@@ -8,6 +8,8 @@ payload:
 
 # DOMAIN
  # - DOMAIN,objects.githubusercontent.com
+ - DOMAIN,downloads.marketplace.jetbrains.com
+ 	
 
 # PROCESS-NAME
  # - PROCESS-NAME,smartdns.exe
