Revert "Update custom_direct.yaml"
This reverts commit ebcdd8a072fc501c508748c3a5e08016110b227e.

--- a/custom_direct.yaml
+++ b/custom_direct.yaml
@@ -13,7 +13,7 @@ payload:
   - DOMAIN-KEYWORD,atlassian
   - DOMAIN-KEYWORD,pokerogue
   - DOMAIN-KEYWORD,unity3d
-  #- DOMAIN-KEYWORD,jetbrains
+  - DOMAIN-KEYWORD,jetbrains
   - DOMAIN-KEYWORD,xboxlive
   - DOMAIN-KEYWORD,wps  
   - DOMAIN-KEYWORD,immersivetranslate
