--- a/custom_direct.yaml
+++ b/custom_direct.yaml
@@ -35,6 +35,7 @@ payload:
   - DOMAIN-KEYWORD,playfabapi
   - DOMAIN-KEYWORD,capcom
   - DOMAIN-KEYWORD,leobog
+  - DOMAIN-KEYWORD,yhdm5  
   
 # DOMAIN-SUFFIX
   - DOMAIN-SUFFIX,ident.me
