--- a/custom_direct.yaml
+++ b/custom_direct.yaml
@@ -37,6 +37,7 @@ payload:
   - DOMAIN-KEYWORD,leobog
   - DOMAIN-KEYWORD,yhdm5
   - DOMAIN-KEYWORD,tpvod
+  - DOMAIN-KEYWORD,juijx
   
 # DOMAIN-SUFFIX
   - DOMAIN-SUFFIX,ident.me
