--- a/custom_direct.yaml
+++ b/custom_direct.yaml
@@ -40,6 +40,7 @@ payload:
   - DOMAIN-KEYWORD,juijx
   - DOMAIN-KEYWORD,cdprojektred
   - DOMAIN-KEYWORD,cdpred
+  - DOMAIN-KEYWORD,gigabyte
   
   
 # DOMAIN-SUFFIX
