--- a/custom_direct.yaml
+++ b/custom_direct.yaml
@@ -85,6 +85,7 @@ payload:
   - DOMAIN,objects.githubusercontent.com
   - DOMAIN,www.hello-algo.com
   - DOMAIN,giscus.app
+  - DOMAIN,static.adtidy.org
 # PROCESS-NAME
  # - PROCESS-NAME,smartdns.exe
  	
