--- a/custom_direct.yaml
+++ b/custom_direct.yaml
@@ -69,7 +69,7 @@ payload:
   - DOMAIN-SUFFIX,gog.com
   - DOMAIN-SUFFIX,msi.com
   - DOMAIN-SUFFIX,wiki.gg
-  
+  - DOMAIN-SUFFIX,nvidia.com 
 # DOMAIN
   - DOMAIN,clash.razord.top
   - DOMAIN,mirror.ghproxy.com
