Update DOMAIN-KEYWORD entries in custom_direct.yaml
Removed several DOMAIN-KEYWORD entries and added new ones under the 小说 section.

--- a/custom_direct.yaml
+++ b/custom_direct.yaml
@@ -40,11 +40,6 @@ payload:
   - DOMAIN-KEYWORD,cdprojektred
   - DOMAIN-KEYWORD,cdpred
   - DOMAIN-KEYWORD,gigabyte
-  - DOMAIN-KEYWORD,qiushu
-  - DOMAIN-KEYWORD,mayiwsk
-  - DOMAIN-KEYWORD,gashuw
-  - DOMAIN-KEYWORD,mayitxt
-  - DOMAIN-KEYWORD,zwduxs
   
 # DOMAIN-SUFFIX
   - DOMAIN-SUFFIX,ident.me
@@ -91,6 +86,181 @@ payload:
   - DOMAIN,giscus.app
   - DOMAIN,static.adtidy.org
   - DOMAIN,ecs.office.com
+
+# 小说
+  - DOMAIN-KEYWORD,qiushu
+  - DOMAIN-KEYWORD,mayiwsk
+  - DOMAIN-KEYWORD,gashuw
+  - DOMAIN-KEYWORD,mayitxt
+  - DOMAIN-KEYWORD,zwduxs
+  - DOMAIN-KEYWORD,qiluwx
+  - DOMAIN-KEYWORD,aoyekanshu
+  - DOMAIN-KEYWORD,dxmwx
+  - DOMAIN-KEYWORD,aixswx
+  - DOMAIN-KEYWORD,dxmwx
+  - DOMAIN-KEYWORD,aibqu
+  - DOMAIN-KEYWORD,mianfeidu
+  - DOMAIN-KEYWORD,pdske
+  - DOMAIN-KEYWORD,xkushu
+  - DOMAIN-KEYWORD,520diandu
+  - DOMAIN-KEYWORD,tycqzw
+  - DOMAIN-KEYWORD,ibiquta
+  - DOMAIN-KEYWORD,jdzwo
+  - DOMAIN-KEYWORD,jdzwo
+  - DOMAIN-KEYWORD,tu93
+  - DOMAIN-KEYWORD,ujxsw
+  - DOMAIN-KEYWORD,deqixs
+  - DOMAIN-KEYWORD,mayiwxw
+  
+  - DOMAIN,www.mayitxt.org
+  - DOMAIN,www.tczh.cn
+  - DOMAIN,www.qiluwx.com
+  - DOMAIN,m.18ys.net
+  - DOMAIN,www.xwurexs.com
+  - DOMAIN,get.aoyekanshu.com
+  - DOMAIN,www.xbqgxs.net
+  - DOMAIN,archiveofourown.org
+  - DOMAIN,m.b483.com
+  - DOMAIN,www.guowx.com
+  - DOMAIN,www.biqu520.net
+  - DOMAIN,www.maxshuku.com
+  - DOMAIN,nnhm7.com
+  - DOMAIN,www.xiarishuwu.com
+  - DOMAIN,www.wuxia8.com
+  - DOMAIN,www.xiuyunovel.com
+  - DOMAIN,www.dmx5.cc
+  - DOMAIN,www.xxhhhh.com
+  - DOMAIN,cooingc.cc
+  - DOMAIN,www.guolu78.com
+  - DOMAIN,www.qiufengshuwu.com
+  - DOMAIN,tanmenba.com
+  - DOMAIN,jpxs123.cc
+  - DOMAIN,www.youduzw.com
+  - DOMAIN,www.78497.com
+  - DOMAIN,www.123yqw.com
+  - DOMAIN,m.shoujix.com
+  - DOMAIN,m.xs639.com
+  - DOMAIN,www.guowx.com
+  - DOMAIN,www.52shukuw.com
+  - DOMAIN,nnhanman9.com
+  - DOMAIN,blnovelw.com
+  - DOMAIN,www.shunong.com
+  - DOMAIN,wap.fdsrxx.com
+  - DOMAIN,www.westnovel.com
+  - DOMAIN,www.txtxs101.com
+  - DOMAIN,www.qbxsw.com
+  - DOMAIN,www.yetianlian.net
+  - DOMAIN,s1.ftn178.com
+  - DOMAIN,www.xinshuw.com
+  - DOMAIN,www.chamabooks.net
+  - DOMAIN,www.biquge365.net
+  - DOMAIN,www.yqk.net
+  - DOMAIN,n.novelia.cc
+  - DOMAIN,www.52shuku123.cc
+  - DOMAIN,api.myweipin.com
+  - DOMAIN,www.piaotia.com
+  - DOMAIN,api.hanwujinian.net
+  - DOMAIN,www.sqllq.com
+  - DOMAIN,www.pdske.com
+  - DOMAIN,www.168txt.cc
+  - DOMAIN,www.jdzwo.com
+  - DOMAIN,apiv2hans.aixdzs.com
+  - DOMAIN,www.biquy.com
+  - DOMAIN,m.bqg234.com
+  - DOMAIN,m.xs63b.com
+  - DOMAIN,www.bqg.fun
+  - DOMAIN,www.zrfsxs.com
+  - DOMAIN,www.52shuku123.org
+  - DOMAIN,books.fishhawk.top
+  - DOMAIN,www.aiyinbei.com
+  - DOMAIN,www.xbotaodz.com
+  - DOMAIN,www.jpxs123.cc
+  - DOMAIN,www.dbxsn.com
+  - DOMAIN,www.5299txt.net
+  - DOMAIN,m.shoujixs.com
+  - DOMAIN,www.manhuayu8.com
+  - DOMAIN,www.sjks88.com
+  - DOMAIN,m.maifeizx.com
+  - DOMAIN,www.bimidu.com
+  - DOMAIN,www.bilinovel.com
+  - DOMAIN,www.bilinovel.com
+  - DOMAIN,www.gchun.com
+  - DOMAIN,api.lfdapengu.com
+  - DOMAIN,kt.bqg123a.top
+  - DOMAIN,wapk.china-yantai.net
+  - DOMAIN,m.bjcan8.com
+  - DOMAIN,www.aakkrr.com
+  - DOMAIN,m.mayiwxw.com
+  - DOMAIN,m.bqg78.com
+  - DOMAIN,www.manhuaba.com
+  - DOMAIN,www.168txt.org
+  - DOMAIN,m.bi234.cc
+  - DOMAIN,www.wxscn.com
+  - DOMAIN,www.wxscs.com
+  - DOMAIN,wap.washuwx.net
+  - DOMAIN,www.cstxt.com
+  - DOMAIN,www.yetianlian.com
+  - DOMAIN,www.bvquge.com
+  - DOMAIN,luoxiadushu.com
+  - DOMAIN,www.dbxsd.com
+  - DOMAIN,www.23qb.com
+  - DOMAIN,69shu.net
+  - DOMAIN,www.dbxsd.com
+  - DOMAIN,wap.qiqixs.info
+  - DOMAIN,www.eexiaoshuo.co
+  - DOMAIN,api.fx361.com
+  - DOMAIN,www.yuanzunxs88.com
+  - DOMAIN,cimg.fx361.com
+  - DOMAIN,www.mwff.cc
+  - DOMAIN,api.fx361.com
+  - DOMAIN,m.fx361.com
+  - DOMAIN,qbtr.cc
+  - DOMAIN,www.zei8.vip
+  - DOMAIN,www.qbtr.cc
+  - DOMAIN,m.zei8.vip
+  - DOMAIN,www.52shukuw.cc
+  - DOMAIN,m.jcxs.cc
+  - DOMAIN,czbooks.net
+  - DOMAIN,m.elkoparts.net
+  - DOMAIN,blnovelhub.com
+  - DOMAIN,m.douyinxs.com
+  - DOMAIN,www.dameishuwang.net
+  - DOMAIN,www.guolu88.cc
+  - DOMAIN,www.banwenwu.com
+  - DOMAIN,www.rwsk2.com
+  - DOMAIN,www.bagzw.com
+  - DOMAIN,www.douyinxs.com
+  - DOMAIN,cdnjs.cloudflare.com
+  - DOMAIN,challenges.cloudflare.com
+  - DOMAIN,challenges.cloudflare.com
+  - DOMAIN,www.mhtmh.com
+  - DOMAIN,www.23wx.cx
+  - DOMAIN,qubook.org
+  - DOMAIN,www.san421.com
+  - DOMAIN,wap.hsjsby.com
+  - DOMAIN,www.tpyyc.com
+  - DOMAIN,www.18mh.net
+  - DOMAIN,m.biquge345.com
+  - DOMAIN,fu44.pw
+  - DOMAIN,m.soushuwang.cc
+  - DOMAIN,www.biquge34.net
+  - DOMAIN,www.mingzw.net
+  - DOMAIN,www.97yd.com
+  - DOMAIN,www.bixiange.top
+  - DOMAIN,jpxs123.top
+  - DOMAIN,manhuafree.com
+  - DOMAIN,www.ibiquxs.org
+  - DOMAIN,www.xxwx8.com
+  - DOMAIN,www.qubook.org
+  - DOMAIN,www.jpxs123.top
+  - DOMAIN,zmhxs.com
+  - DOMAIN,m.po18co.com
+  - DOMAIN,www.qqxsw.mx
+  - DOMAIN,www.yuedu.info
+  - DOMAIN,m.biquai.cc
+  - DOMAIN,www.lrxsw.org
+
+
 # PROCESS-NAME
  # - PROCESS-NAME,smartdns.exe
  	
